--- a/App_Themes/WSMA/sass/99-WSMA.scss
+++ b/App_Themes/WSMA/sass/99-WSMA.scss
@@ -47,10 +47,10 @@
 @import "shared/dashboards";
 @import "shared/svg";
 
-#masterHeaderImage {
-    margin-top: 32px;
-    //margin-bottom: 10px;
-}
+// #masterHeaderImage {
+//     margin-top: 32px;
+//     //margin-bottom: 10px;
+// }
 
 .carousel-caption {
     top: 170px;
