--- a/App_Themes/WSMA/sass/NaturalHeritageSites/layouts/_naturalHeritageSites-mp.scss
+++ b/App_Themes/WSMA/sass/NaturalHeritageSites/layouts/_naturalHeritageSites-mp.scss
@@ -228,6 +228,7 @@
         }
     }
     #masterHeaderImage {
+        margin-top: 40px;
         svg {
             .cls-1 {
                 fill: none;
