--- a/App_Themes/WSMA/sass/shared/_masterpage_styles.scss
+++ b/App_Themes/WSMA/sass/shared/_masterpage_styles.scss
@@ -86,6 +86,7 @@
         }
     }
     @include respond-to('grid large') {
+        margin-top: 40px;
         svg {
             .cls-1 {
                 fill: none;
